// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<ViewManagerAdapter_ExpoLinearGradient
  colors={
    [
      4278216447,
      4278249075,
    ]
  }
  endPoint={
    [
      1,
      1,
    ]
  }
  startPoint={
    [
      0,
      0.2,
    ]
  }
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "height": "100%",
      "margin": 0,
      "padding": 0,
      "width": "100%",
    }
  }
>
  <RCTSafeAreaView
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "height": "100%",
        "margin": 0,
        "padding": 0,
        "width": "100%",
      }
    }
  >
    <Image
      source={1}
      style={
        {
          "aspectRatio": 2.7985865724381624,
          "flex": 0.25,
          "marginBottom": "10%",
          "marginTop": 20,
          "width": "100%",
        }
      }
    />
    <Text
      style={
        {
          "color": "white",
          "fontSize": 32,
          "fontWeight": "bold",
        }
      }
    >
      Waste Watcher
    </Text>
    <Text
      style={
        {
          "color": "white",
          "fontSize": 24,
          "marginBottom": "10%",
        }
      }
    >
      Food Waste Tracker
    </Text>
    <TextInput
      cursorColor="white"
      onChangeText={[Function]}
      placeholder="Username"
      placeholderTextColor="#fff"
      selectionColor="white"
      style={
        [
          {
            "backgroundColor": "rgba(255, 255, 255, 0.25)",
            "borderRadius": 7,
            "fontSize": 15,
            "height": 50,
            "margin": 8,
            "paddingLeft": 15,
            "width": "85%",
          },
          {
            "color": "#fff",
          },
        ]
      }
    />
    <TextInput
      cursorColor="white"
      onChangeText={[Function]}
      placeholder="Password"
      placeholderTextColor="#fff"
      secureTextEntry={true}
      selectionColor="white"
      style={
        [
          {
            "backgroundColor": "rgba(255, 255, 255, 0.25)",
            "borderRadius": 7,
            "fontSize": 15,
            "height": 50,
            "margin": 8,
            "paddingLeft": 15,
            "width": "85%",
          },
          {
            "color": "#fff",
          },
        ]
      }
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "rgba(0,0,0,0)",
          },
          {
            "alignItems": "center",
            "borderColor": "rgba(255, 255, 255, 0.25)",
            "borderRadius": 7,
            "borderWidth": 3,
            "height": 50,
            "justifyContent": "space-evenly",
            "margin": 8,
            "width": "85%",
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "white",
            "fontWeight": "bold",
          }
        }
      >
        Log In
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "rgba(0,0,0,0)",
          },
          {
            "alignItems": "center",
            "borderRadius": 7,
            "height": 30,
            "justifyContent": "center",
            "marginTop": 3,
            "paddingTop": 0,
            "width": "85%",
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "white",
          }
        }
      >
        Forgot your login details? 
        <Text
          style={
            {
              "fontWeight": "bold",
            }
          }
        >
          Get help signing in.
        </Text>
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#fff",
          "fontSize": 16,
          "marginBottom": 15,
          "marginTop": 15,
        }
      }
    >
      OR
    </Text>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "rgba(255, 255, 255, 0.25)",
          "borderRadius": 7,
          "flexDirection": "row",
          "fontSize": 15,
          "height": 50,
          "justifyContent": "center",
          "width": "85%",
        }
      }
    >
      <Text />
      <Text
        style={
          {
            "color": "white",
            "fontWeight": "bold",
            "paddingLeft": 8,
          }
        }
      >
        Sign in with Google
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "rgba(0,0,0,0)",
          },
          {
            "alignItems": "center",
            "borderRadius": 7,
            "height": 50,
            "justifyContent": "center",
            "marginTop": 10,
            "paddingTop": 0,
            "width": "85%",
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "white",
          }
        }
      >
        Dont have an account? 
        <Text
          style={
            {
              "fontWeight": "bold",
            }
          }
        >
          Sign up
        </Text>
      </Text>
    </View>
  </RCTSafeAreaView>
</ViewManagerAdapter_ExpoLinearGradient>
`;

exports[`renders correctly 2`] = `
<ViewManagerAdapter_ExpoLinearGradient
  colors={
    [
      4278216447,
      4278249075,
    ]
  }
  endPoint={
    [
      1,
      1,
    ]
  }
  startPoint={
    [
      0,
      0.2,
    ]
  }
  style={
    {
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "flex": 1,
          "flexDirection": "column",
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flex": 1,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "backgroundColor": "rgba(0,0,0,0)",
            },
            {
              "alignSelf": "flex-start",
              "borderRadius": 14,
              "margin": 10,
              "marginTop": 40,
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#fff",
              "fontSize": 40,
              "paddingBottom": 20,
              "paddingLeft": 25,
              "paddingRight": 25,
              "paddingTop": 20,
            }
          }
        >
          ×
        </Text>
      </View>
      <Text
        style={
          {
            "alignItems": "center",
            "color": "white",
            "fontSize": 35,
            "justifyContent": "center",
          }
        }
      >
        Forgot Password?
      </Text>
      <Text
        style={
          {
            "color": "#fff",
            "fontSize": 15,
            "marginBottom": 15,
            "marginTop": 80,
            "width": "80%",
          }
        }
      >
        Please enter your email and we'll send you an email with a link to reset your password.
      </Text>
      <TextInput
        cursorColor="white"
        onChangeText={[Function]}
        onEndEditing={[Function]}
        placeholder="example@gmail.com"
        placeholderTextColor="#fff"
        selectionColor="white"
        style={
          [
            {
              "backgroundColor": "rgba(255, 255, 255, 0.25)",
              "borderRadius": 7,
              "fontSize": 15,
              "height": 50,
              "marginBottom": 8,
              "paddingLeft": 15,
              "width": "85%",
            },
            {
              "color": "#fff",
            },
          ]
        }
      />
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "backgroundColor": "rgba(0,0,0,0)",
            },
            {
              "alignItems": "center",
              "borderColor": "rgba(255, 255, 255, 0.25)",
              "borderRadius": 7,
              "borderWidth": 3,
              "height": 50,
              "justifyContent": "space-evenly",
              "margin": 8,
              "width": "85%",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "white",
              "fontSize": 15,
            }
          }
        >
          Reset Password
        </Text>
      </View>
    </View>
  </View>
</ViewManagerAdapter_ExpoLinearGradient>
`;

exports[`renders correctly 3`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "space-between",
      "marginBottom": "5%",
      "marginTop": "2%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderRadius": 10,
        "elevation": 10,
        "height": "25%",
        "justifyContent": "space-evenly",
        "shadowColor": "#171717",
        "shadowOffset": {
          "height": 4,
          "width": -3,
        },
        "shadowOpacity": 0.2,
        "shadowRadius": 6,
        "width": "90%",
      }
    }
  >
    <Text
      style={
        {
          "color": "#2e992a",
          "fontSize": 30,
          "fontWeight": "700",
        }
      }
    >
      Leaderboard
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "height": "25%",
          "justifyContent": "space-evenly",
          "width": "90%",
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#2e992a",
              "borderRadius": 30,
              "height": "100%",
              "justifyContent": "center",
              "width": "25%",
            },
            {
              "backgroundColor": "#2e992a",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#fff",
            }
          }
        >
          Local
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#2e992a",
              "borderRadius": 30,
              "height": "100%",
              "justifyContent": "center",
              "width": "25%",
            },
            {
              "backgroundColor": "#53c44f",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#fff",
            }
          }
        >
          Global
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderRadius": 10,
        "elevation": 10,
        "height": "72%",
        "justifyContent": "center",
        "shadowColor": "#171717",
        "shadowOffset": {
          "height": 4,
          "width": -3,
        },
        "shadowOpacity": 0.2,
        "shadowRadius": 6,
        "width": "90%",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "height": "93%",
          "width": "90%",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": "3%",
            "width": "100%",
          }
        }
      >
        <Text
          style={
            {
              "flex": 1,
              "fontSize": 15,
              "fontWeight": "500",
              "textAlign": "center",
            }
          }
        >
          Rank
        </Text>
        <Text
          style={
            {
              "flex": 1,
            }
          }
        />
        <Text
          style={
            {
              "flex": 5,
              "fontSize": 15,
              "fontWeight": "500",
              "textAlign": "center",
            }
          }
        >
          Name
        </Text>
        <Text
          style={
            {
              "flex": 1,
              "fontSize": 15,
              "fontWeight": "500",
              "textAlign": "center",
            }
          }
        >
          Score
        </Text>
      </View>
      <View
        style={
          {
            "backgroundColor": "#808080",
            "borderRadius": 2,
            "height": 2,
            "width": "100%",
          }
        }
      />
      <View
        style={
          {
            "flex": 1,
            "width": "100%",
          }
        }
      >
        <RCTScrollView
          contentContainerStyle={
            {
              "flex": 1,
            }
          }
          showsVerticalScrollIndicator={false}
          style={
            {
              "flexDirection": "row",
              "flexWrap": "wrap",
              "width": "100%",
            }
          }
        >
          <View>
            <View
              style={
                {
                  "alignItems": "center",
                  "height": "10%",
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  {
                    "flexDirection": "row",
                    "height": "100%",
                    "width": "100%",
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "height": "100%",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text>
                    1
                  </Text>
                </View>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "height": "100%",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text>
                    <Text />
                  </Text>
                </View>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flex": 5,
                      "height": "100%",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text>
                    Declan
                  </Text>
                </View>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "height": "100%",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text>
                    936
                  </Text>
                </View>
              </View>
              <View
                style={
                  {
                    "backgroundColor": "#808080",
                    "borderRadius": 2,
                    "height": 2,
                    "width": "100%",
                  }
                }
              />
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "height": "10%",
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  {
                    "flexDirection": "row",
                    "height": "100%",
                    "width": "100%",
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "height": "100%",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text>
                    2
                  </Text>
                </View>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "height": "100%",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text>
                    <Text />
                  </Text>
                </View>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flex": 5,
                      "height": "100%",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text>
                    Gavin
                  </Text>
                </View>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "height": "100%",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text>
                    885
                  </Text>
                </View>
              </View>
              <View
                style={
                  {
                    "backgroundColor": "#808080",
                    "borderRadius": 2,
                    "height": 2,
                    "width": "100%",
                  }
                }
              />
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "height": "10%",
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  {
                    "flexDirection": "row",
                    "height": "100%",
                    "width": "100%",
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "height": "100%",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text>
                    3
                  </Text>
                </View>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "height": "100%",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text>
                    <Text />
                  </Text>
                </View>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flex": 5,
                      "height": "100%",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text>
                    Chase
                  </Text>
                </View>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "height": "100%",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text>
                    737
                  </Text>
                </View>
              </View>
              <View
                style={
                  {
                    "backgroundColor": "#808080",
                    "borderRadius": 2,
                    "height": 2,
                    "width": "100%",
                  }
                }
              />
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "height": "10%",
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  {
                    "flexDirection": "row",
                    "height": "100%",
                    "width": "100%",
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "height": "100%",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text>
                    4
                  </Text>
                </View>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "height": "100%",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text>
                    <Text />
                  </Text>
                </View>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flex": 5,
                      "height": "100%",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text>
                    Finn
                  </Text>
                </View>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "height": "100%",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text>
                    695
                  </Text>
                </View>
              </View>
              <View
                style={
                  {
                    "backgroundColor": "#808080",
                    "borderRadius": 2,
                    "height": 2,
                    "width": "100%",
                  }
                }
              />
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "height": "10%",
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  {
                    "flexDirection": "row",
                    "height": "100%",
                    "width": "100%",
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "height": "100%",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text>
                    5
                  </Text>
                </View>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "height": "100%",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text>
                    <Text />
                  </Text>
                </View>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flex": 5,
                      "height": "100%",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text>
                    Levi
                  </Text>
                </View>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "height": "100%",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text>
                    643
                  </Text>
                </View>
              </View>
              <View
                style={
                  {
                    "backgroundColor": "#808080",
                    "borderRadius": 2,
                    "height": 2,
                    "width": "100%",
                  }
                }
              />
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders correctly 4`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "height": "100%",
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#53c44f",
        "flex": 1,
      }
    }
  >
    <Image
      source={1}
      style={
        {
          "margin": "20%",
        }
      }
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onLayout={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "white",
          "borderRadius": 20,
          "elevation": 10,
          "height": 250,
          "shadowColor": "#171717",
          "shadowOffset": {
            "height": 4,
            "width": -3,
          },
          "shadowOpacity": 0.2,
          "shadowRadius": 6,
          "width": "70%",
        }
      }
    >
      <TextInput
        cursorColor="black"
        onChangeText={[Function]}
        placeholder="Username"
        style={
          {
            "borderColor": "grey",
            "borderRadius": 10,
            "borderWidth": 3,
            "margin": "4%",
            "padding": "1%",
            "paddingLeft": "3%",
            "paddingTop": "1%",
            "width": "80%",
          }
        }
      />
      <TextInput
        cursorColor="black"
        onChangeText={[Function]}
        placeholder="Password"
        secureTextEntry={true}
        style={
          {
            "borderColor": "grey",
            "borderRadius": 10,
            "borderWidth": 3,
            "margin": "4%",
            "padding": "1%",
            "paddingLeft": "3%",
            "paddingTop": "1%",
            "width": "80%",
          }
        }
      />
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "flex-start",
            "alignSelf": "flex-start",
            "height": "15%",
            "marginLeft": "22%",
            "width": "45%",
          }
        }
      >
        <Text
          style={
            {
              "alignSelf": "center",
              "color": "blue",
              "fontSize": 14,
              "textDecorationLine": "underline",
            }
          }
        >
          Forgot password?
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "backgroundColor": "#2e992a",
            },
            {
              "alignItems": "center",
              "borderRadius": 5,
              "elevation": 10,
              "height": 30,
              "justifyContent": "space-evenly",
              "paddingBottom": "1%",
              "shadowColor": "#171717",
              "shadowOffset": {
                "height": 4,
                "width": -3,
              },
              "shadowOpacity": 0.2,
              "shadowRadius": 6,
              "width": "30%",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "white",
            }
          }
        >
          Log In
        </Text>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "margin": 10,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "borderRadius": 5,
              "width": 50,
            }
          }
        >
          <Text />
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "borderRadius": 5,
              "width": 50,
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "black",
                  "fontSize": 29,
                },
                undefined,
                {
                  "fontFamily": "ionicons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders correctly 5`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#fff",
        "borderRadius": 10,
        "elevation": 10,
        "height": "40%",
        "marginTop": "2%",
        "shadowColor": "#171717",
        "shadowOffset": {
          "height": 4,
          "width": -3,
        },
        "shadowOpacity": 0.2,
        "shadowRadius": 6,
        "width": "90%",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "height": "23%",
          "justifyContent": "space-around",
          "marginTop": "7%",
          "paddingHorizontal": "5%",
          "width": "100%",
        }
      }
    >
      <Text
        style={
          {
            "flex": 2,
          }
        }
      />
      <Text
        style={
          {
            "flex": 3,
            "fontSize": 28,
            "fontWeight": "800",
            "textAlign": "center",
          }
        }
      >
        My Profile
      </Text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "flex": 2,
            "justifyContent": "center",
          }
        }
      >
        <Text />
      </View>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "justifyContent": "flex-start",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
            "marginLeft": "3%",
            "width": "50%",
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "black",
                "fontSize": 175,
              },
              undefined,
              {
                "fontFamily": "material-community",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          󰀆
        </Text>
      </View>
      <View
        style={
          {
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            {
              "fontSize": 20,
              "fontWeight": "700",
            }
          }
        >
          John Doe
        </Text>
        <Text
          style={
            {
              "color": "#808080",
              "fontSize": 16,
            }
          }
        >
          jdoe99@email.com
        </Text>
        <Text
          style={
            {
              "color": "#808080",
              "fontSize": 16,
            }
          }
        >
          04473
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "space-around",
        "marginVertical": "2.6%",
        "width": "90%",
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "white",
          "borderRadius": 10,
          "flexDirection": "row",
          "height": "20%",
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "marginLeft": "6%",
            "marginRight": "1%",
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "black",
                "fontSize": 50,
              },
              undefined,
              {
                "fontFamily": "material-community",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          󰅸
        </Text>
      </View>
      <View
        style={
          {
            "flex": 1,
            "justifyContent": "center",
            "marginLeft": "3%",
          }
        }
      >
        <Text
          style={
            {
              "fontSize": 24,
              "fontWeight": "700",
              "marginBottom": "1%",
            }
          }
        >
          Notifications
        </Text>
        <Text
          style={
            {
              "color": "#808080",
              "marginRight": "10%",
            }
          }
        >
          No new messages
        </Text>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "white",
          "borderRadius": 10,
          "flexDirection": "row",
          "height": "20%",
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "marginLeft": "6%",
            "marginRight": "1%",
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "black",
                "fontSize": 50,
              },
              undefined,
              {
                "fontFamily": "material",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        style={
          {
            "flex": 1,
            "justifyContent": "center",
            "marginLeft": "3%",
          }
        }
      >
        <Text
          style={
            {
              "fontSize": 24,
              "fontWeight": "700",
              "marginBottom": "1%",
            }
          }
        >
          Streak
        </Text>
        <Text
          style={
            {
              "color": "#808080",
              "marginRight": "10%",
            }
          }
        >
          Track waste daily to keep the streak alive
        </Text>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "white",
          "borderRadius": 10,
          "flexDirection": "row",
          "height": "20%",
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "marginLeft": "6%",
            "marginRight": "1%",
          }
        }
      >
        <Text />
      </View>
      <View
        style={
          {
            "flex": 1,
            "justifyContent": "center",
            "marginLeft": "3%",
          }
        }
      >
        <Text
          style={
            {
              "fontSize": 24,
              "fontWeight": "700",
              "marginBottom": "1%",
            }
          }
        >
          My Badges
        </Text>
        <Text
          style={
            {
              "color": "#808080",
              "marginRight": "10%",
            }
          }
        >
          Earn badges by completing tasks
        </Text>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "white",
          "borderRadius": 10,
          "flexDirection": "row",
          "height": "20%",
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "marginLeft": "6%",
            "marginRight": "1%",
          }
        }
      >
        <Text />
      </View>
      <View
        style={
          {
            "flex": 1,
            "justifyContent": "center",
            "marginLeft": "3%",
          }
        }
      >
        <Text
          style={
            {
              "fontSize": 24,
              "fontWeight": "700",
              "marginBottom": "1%",
            }
          }
        >
          Refer a Friend
        </Text>
        <Text
          style={
            {
              "color": "#808080",
              "marginRight": "10%",
            }
          }
        >
          Invite friends to track their own waste
        </Text>
      </View>
    </View>
  </View>
</View>
`;
